# whisper-rust-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: ai.rs  lib.rs  time_utils.rs
media_cutter/: Cargo.toml
media_cutter/src/: main.rs  video_cutter.rs
whisper_app/: Cargo.toml
whisper_app/src/: audio.rs  main.rs  whisper_engine.rs
