[package]
name = "media_cutter"
version = "2.0.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
uuid = { version = "1.11", features = ["v4"] }
