[package]
name = "whisper_app"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
byteorder = "1.4" 

# ML / Whisper
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
tokenizers = "0.21.0"
hf-hub = "0.4.1" # For downloading models
wav = "1.0"
rustfft = "6.2"
symphonia = { version = "0.5.3", features = ["all"] }

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
